// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 145.7,
    "goldPerMinute": 62880000,
    "shipsArrived": 1457,
    "shipsSent": 1505,
    "tradeGold": 628784302n,
  },
  "b": {
    "arrivalsPerMinute": 135.6,
    "goldPerMinute": 62880000,
    "shipsArrived": 1356,
    "shipsSent": 1454,
    "tradeGold": 628784302n,
  },
  "goldPerTrade": 223500,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 4.8,
    "goldPerMinute": 771500,
    "shipsArrived": 24,
    "shipsSent": 28,
    "tradeGold": 3857711n,
  },
  "b": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 771500,
    "shipsArrived": 29,
    "shipsSent": 35,
    "tradeGold": 3857711n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 14.2,
    "goldPerMinute": 1456000,
    "shipsArrived": 71,
    "shipsSent": 79,
    "tradeGold": 7278700n,
  },
  "b": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 1456000,
    "shipsArrived": 29,
    "shipsSent": 35,
    "tradeGold": 7278700n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 76.35,
    "goldPerMinute": 23200000,
    "shipsArrived": 509,
    "shipsSent": 780,
    "tradeGold": 154640736n,
  },
  "b": {
    "arrivalsPerMinute": 81.3,
    "goldPerMinute": 23200000,
    "shipsArrived": 542,
    "shipsSent": 825,
    "tradeGold": 154640736n,
  },
  "goldPerTrade": 147100,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.6,
    "goldPerMinute": 1115000,
    "shipsArrived": 24,
    "shipsSent": 38,
    "tradeGold": 7430348n,
  },
  "b": {
    "arrivalsPerMinute": 4.2,
    "goldPerMinute": 1115000,
    "shipsArrived": 28,
    "shipsSent": 44,
    "tradeGold": 7430348n,
  },
  "goldPerTrade": 142900,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.6,
    "goldPerMinute": 61400,
    "shipsArrived": 28,
    "shipsSent": 28,
    "tradeGold": 307017n,
  },
  "b": {
    "arrivalsPerMinute": 6.6,
    "goldPerMinute": 61400,
    "shipsArrived": 33,
    "shipsSent": 35,
    "tradeGold": 307017n,
  },
  "goldPerTrade": 5033,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 47.2,
    "goldPerMinute": 8603000,
    "shipsArrived": 236,
    "shipsSent": 276,
    "tradeGold": 43014010n,
  },
  "b": {
    "arrivalsPerMinute": 45.2,
    "goldPerMinute": 8603000,
    "shipsArrived": 226,
    "shipsSent": 266,
    "tradeGold": 43014010n,
  },
  "goldPerTrade": 93100,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 42.8,
    "goldPerMinute": 8827000,
    "shipsArrived": 214,
    "shipsSent": 263,
    "tradeGold": 44135905n,
  },
  "b": {
    "arrivalsPerMinute": 41.8,
    "goldPerMinute": 8827000,
    "shipsArrived": 209,
    "shipsSent": 259,
    "tradeGold": 44135905n,
  },
  "goldPerTrade": 104300,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 27.2,
    "goldPerMinute": 9266000,
    "shipsArrived": 272,
    "shipsSent": 380,
    "tradeGold": 92660300n,
  },
  "b": {
    "arrivalsPerMinute": 27.9,
    "goldPerMinute": 9266000,
    "shipsArrived": 279,
    "shipsSent": 396,
    "tradeGold": 92660300n,
  },
  "goldPerTrade": 168200,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 335000n,
  "aGoldPerMinute": 67000,
  "aSelfTradeGold": 335000n,
  "bExternalTradeGold": 225000n,
  "bGoldDelta": 225000n,
  "trainUnitsSeen": 140,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 190000n,
  "aGoldPerMinute": 38000,
  "aSelfTradeGold": 190000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 133,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 200000n,
  "aGoldPerMinute": 40000,
  "aSelfTradeGold": 200000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 140,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 260000n,
  "aGoldPerMinute": 52000,
  "aSelfTradeGold": 260000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 238,
}
`;
